[tool.poetry]
name = "dom-ai-automator"
version = "0.0.1"
description = "A tool to automate DOM with AI"
authors = ["Oscar Bahamonde <o.bahamonde@globant.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.10.12"
pyppeteer = "^1.0.2"
openai = "^1.6.1"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
bs4 = "^0.0.1"
lxml = "^5.0.0"
glob-utils = "^0.0.6"
sse-starlette = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
